--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "hboie/jasper-report-bundle",
-  "description": "Symfony 2-5 / Symfony Flex Bundle integrating the Jaspersoft REST v2 client (jaspersoft/rest-client)",
+  "description": "Symfony 7 / Symfony Flex Bundle integrating the Jaspersoft REST v2 client (jaspersoft/rest-client)",
   "type": "symfony-bundle",
   "authors": [
     {
@@ -12,9 +12,9 @@
   "homepage": "https://github.com/hboie/JasperReportBundle",
   "license": "MIT",
   "require": {
-    "php": ">=5.3.2",
+    "php": ">=8",
     "ext-zip": "*",
-    "symfony/framework-bundle": "~2.6|~3.0|~4.0|~5.0",
+    "symfony/framework-bundle": "~7.0",
     "symfony/filesystem": ">=2.6",
     "hboie/jasper-rest-client": "*"
   },
